<resources>
    <string name="app_name">Article_Detail_Transition</string>
    <string name="title_activity_detail">Details</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_share">Share</string>
    <string name="section_1">Section 1</string>
    <string name="some_informations">Some informations...</string>
    <string name="section_2">Section 2</string>
    <string name="lesson1_question_1">Which destination you are GOING?</string>
    <string name="lesson1_parag_1">This verse tells us about God\'s Eternal Plan and you are included in it. Yes! God has a wonderful plan for you. He knows your Hopes, Dreams, and all the desires of your heart because He is the one who placed it there </string>
    <string name="lesson1_parag_2">The Bible tells us that.. God has placed eternity in the hearts of men (Ecclesiastes 3:11). Meaning, that we are an eternal being, and that the things that can satisfy us are only things with eternal value. By knowing God\'s Eternal Plan for us is what brings real satisfaction.</string>
    <string name="lesson4_parag_1">A lot of people only see Jesus as religion but never experienced a personal relationship with Him.\nI believe it\'s about time to change. It\'s time to change religion into RELATION, because Jesus is not interested in our religion.\nHe is interested in our relationship with Him.</string>
    <string name="lesson4_parag_2">\nThe Moment you accepted Jesus as your personal Lord and Savior, you begun a relationship that will continue to last forever.</string>
    <string name="lesson4_parag_3">\nHow\'s your Relationship with God?</string>
    <string name="lesson4_parag_title_1">BE ROOTED - LORDSHIP IS MAKING HIM NUMBER ONE</string>
    <string name="lesson4_parag_4">In order to contine following Jesus you must let your roots grow down into Him by acknowledging His Lordship over your lives. Like a tree that depends its life on the roots, so as salvation begins by confessing that  Jesus is Lord.\n</string>
    <string name="lesson4_romans_10_9">That if you confess with your mouth, \"Jesus is Lord,\" and believe and your heart that God raised Him from the dead, you will be saved.\n</string>
    <string name="lesson4_parag_5">Lordship simply means \"Number One\". Confessing Him as your Lord is making Him the number one and top priority of your life. It\'s all about coming into a complete surrender and security taht He knows what\'s best for you.</string>
    <string name="lesson4_parag_6">\nA tree without roots is a tree without Life. Jesus must become root of our life, for without Him we are nothing.</string>
    <string name="lesson4_parag_title_2">BE BUILT ON HIM - LORDSHIP IS LIVING A LIFE OF OBEDIENCE</string>
    <string name="lesson4_parag_7">Salvation is what Christ has done for us but Lordship is what we can do for Him. Apostle Paul taught us that the next thing we must do is to let your lives be built on Him. We can do this by living a life of obedience to His Word.\n</string>
    <string name="lesson4_matthew_7_24">Therefore everyone who hears these words of mine and puts them into practice is like a wise man who built his house on the rock.\n</string>
    <string name="lesson4_parag_8">Lordship demands our obedience, Christ must be the supreme authority of our lives to the point that it\'s not our will but His will be done. As we do this we are building our lives on unshakeable foundation, no storms and waves of this life can destroy us because we are founded on the solid rock.</string>
    <string name="lesson4_parag_title_3">BE FAITHFUL - HIS LORDSHIP IN YOUR LIFE WILL BE TESTED, STAY FAITHFUL</string>
    <string name="lesson4_parag_9">When we follow God\'s will, it comes being faithful (then your faith will grow strong in the truth v.7b)... our faith will always be be tested. Temptation and distractions may come but when you know who the ruler of your life is, it\'s easy to stay faithful. It\'s easy to know that this is just a test. If you know that you belong to God you will have confidence that He knows what\'s best and will remain faithful to Him.\n</string>
    <string name="lesson4_psalms_18_25">To the faithful you show yourself faithful;\n</string>
    <string name="lesson4_parag_10">But if you don\'t stay and faithful and follow the distraction, that path will lead you to a world of fear and unbelief. All because you have allowed something else to rule you. In doing that, you are not living God\s will for your life and you will not reap the benefits of His blessings.\n</string>
    <string name="lesson4_prov_28_28">Many are the blessings of a faithful man and an evil one will not be spared in His evil.\n</string>
    <string name="lesson4_parag_11">Blessings are waiting for the faithful ones and it can be yours too.</string>
    <string name="lesson4_parag_title_4">BE THANKFUL - LORDSHIP STARTS FROM OUR THANKFUL HEART</string>
    <string name="lesson4_parag_12">Lordship can bring us a sense of security and joy that will result to (overflow with thankfulness v.7b). This is the difference between religion and relationship. We follow Jesus, not because we have to but because we want to. It\'s willingness of the heart and not about folling as a set of religion and traditional it\'s a personal thing that starts from our thankful heart.\n</string>
    <string name="lesson4_psamls_86_12">I give thanks to you, O Lord my God, with my whole heart, and I will glorify your name forever.\n</string>
    <string name="lesson4_parag_13">Serving God is never boring; It\'s full of fun and surprises. The greatest decision you have made in your life is the time you have fully surrendered and submitted to His Lordship.</string>
    <string name="lesson4_app1">• Are there areas in your Life that you need to submit to His Lordship?</string>
    <string name="lesson4_app2">• Are you willing to make Him the number one in your Life?</string>
    <string name="lesson4_app3">• Are you willing to lay down your will and let His will be done in your life through prayer?</string>
</resources>