<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/c__b"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".LessonsDetailActivity"
    tools:showIn="@layout/activity_details">



    <LinearLayout
        android:id="@+id/mDetailsContent"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="-20dp"
        android:padding="-10dp">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:text="@string/lesson4_parag_1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:text="@string/lesson4_parag_2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:textStyle="bold"
                    android:text="@string/lesson4_parag_3"/>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="#1d1d1d"
                    android:text="@string/lesson4_parag_title_1"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:text="@string/lesson4_parag_4"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textColor="#1d1d1d"
                    android:text="Romans 10:9"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:textStyle="italic"
                    android:text="@string/lesson4_romans_10_9"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:text="@string/lesson4_parag_5"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:textStyle="bold"
                    android:text="@string/lesson4_parag_6"/>


            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="#1d1d1d"
                    android:text="@string/lesson4_parag_title_2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:text="@string/lesson4_parag_7"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textColor="#1d1d1d"
                    android:text="Matthew 7:24 NIV"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:textStyle="italic"
                    android:text="@string/lesson4_matthew_7_24"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:text="@string/lesson4_parag_8"/>




            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:background="#FFF"
            android:layout_marginRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#FFF"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="#1d1d1d"
                    android:text="@string/lesson4_parag_title_3"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:text="@string/lesson4_parag_9"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textColor="#1d1d1d"
                    android:text="Psamls 18:25a NLT"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:textStyle="italic"
                    android:text="@string/lesson4_psalms_18_25"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:textStyle="italic"
                    android:text="@string/lesson4_parag_10"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textColor="#1d1d1d"
                    android:text="Provebs 28:28 PE"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:textStyle="italic"
                    android:text="@string/lesson4_prov_28_28"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:text="@string/lesson4_parag_11"/>

            </LinearLayout>


        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:background="#FFF"
            android:layout_marginRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#FFF"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="#1d1d1d"
                    android:text="@string/lesson4_parag_title_4"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:text="@string/lesson4_parag_12"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textStyle="bold"
                    android:textColor="#1d1d1d"
                    android:text="Psalm 86:12"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:textStyle="italic"
                    android:text="@string/lesson4_psamls_86_12"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#1d1d1d"
                    android:textStyle="bold"
                    android:text="@string/lesson4_parag_13"/>



            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:background="#1d1d1d"
            android:layout_marginRight="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="#1d1d1d"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="25dp"
                    android:textStyle="bold"
                    android:textColor="#FFF"
                    android:text="PERSONAL APPLICATION"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#FFF"
                    android:text="@string/lesson4_app1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#FFF"
                    android:text="@string/lesson4_app2"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textColor="#FFF"
                    android:text="@string/lesson4_app3"/>


            </LinearLayout>


        </android.support.v7.widget.CardView>



    </LinearLayout>
</android.support.v4.widget.NestedScrollView>